fixes: vorticity // microCT body with shell // E.Mundus insect body // minor fixes

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -493,11 +493,19 @@ particleCommand=./pig;
 ; Body geometry
 x_pivot_r=0.0 0.0 0.0; (vector) position of right wing in body system
 x_pivot_l=0.0 0.0 0.0; (vector) position of left wing in body system
-; Body (types: ellipsoid, drosophila, nobody)
+; Body (types: ellipsoid, drosophila, nobody, superSTL, sphere) if free sphere in geometry use sphere
 BodyType=nobody;
+; if the body is a superSTL file, specify the filename here. Note: the geometry
+; is understood in the body frame of reference, hence 0,0,0 is the centre of the body
+; (which does in our notation imply the centre of gravity there, but this is relevant
+; only in free-fight, and the superSTL option is currently only used for tethered flight)
+BodySuperSTLfile=;
 HasDetails=all; legs; antennae_proboscis; no;
 RightWing=yes;
 LeftWing=no;
+; if the insect has a fore- and hind wing, we end up with a four-winged insect
+RightWing2=no;
+LeftWing2=no;
 b_body=0.2;
 L_body=1.0;
 R_head=0.20;
@@ -511,12 +519,21 @@ gravity=1.0; negative: falling in negative z-direction
 ;-------------------------------------------------------------------------------
 ; Wing geometry (Shapes: rectangular, TwoEllipses, drosophila, drosophila_mutated,
 ; drosophila_sandberg, drosophila_maeda, flapper_sane)
+; You can also set WingShape=from_file::wing_shape.ini to read the wing geometry
+; from an INI file. In the latter case, generic Fourier and rectangular wings with
+; and without bristles are available.
 WingShape=suzuki;
 b_top=0.1; if WingShape=TwoEllipses, that's thickness of the forward one
 b_bot=0.3; if WingShape=TwoEllipses, that's thickness of the backward one
 L_chord=1.0;
+; the variable L_span is used for bounding box testing and is required only for
+; the WingShapes=[mosquito_iams, rectangular, TwoEllipses ]
 L_span=1.0;
-WingThickness=0.0417; # FOR suzukis TESTCASE, THIS IS A CONSTANT!!
+; wing tickness (from top to bottom surface, not divided by two)
+; note if you use WingShape=from_file:: then the thickness is possibly overwritten
+; by the value in this ini file. If the value is not found in the file, the one given
+; here is used.
+WingThickness=0.0417;
 ; wing inertia tensor (used to compute inertial power)
 Jxx=0.0560;
 Jyy=0.0031;
@@ -524,11 +541,13 @@ Jzz=0.0591;
 Jxy=0.0061;
 ;-------------------------------------------------------------------------------
 ; Body motion
-; motion of the body: (tethered, free_flight)
+; motion of the body: (tethered, free_flight, yawpitchroll_param)
 BodyMotion=tethered;
-x0=2 2 2; initial (or tethered) position. default is center of domain.
-v0=0 0 0; inital velocity. default is at rest.
-yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered) body orientation in degrees
+x0=2 2 2; initial (or tethered) position
+v0=0 0 0; inital velocity
+yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered, or time-average) orientation in degrees
+yawpitchroll_a1=0.0 15.0 0.0; if BodyMotion=yawpitchroll_param first cosine harmonic component
+yawpitchroll_b1=0.0 10.0 0.0; if BodyMotion=yawpitchroll_param first sine harmonic component
 eta0=-45.00; stroke plane angle in degrees
 DoF=000000; x,y,z,yaw,pitch,roll DoF on=1 or off=0
 ;-------------------------------------------------------------------------------
@@ -540,6 +559,34 @@ FlappingMotion_left=suzuki;
 ; if flappingmotion=="from_file", which file to use?
 infile=bumblebee_new_kinematics.ini;
 ;-------------------------------------------------------------------------------
+; The fractal tree module is a submodule of the insect module. We can also simulate
+; an insect together with a fractal tree
+fractal_tree=no;
+; a fractal tree is a list of cylinders. They are given in a simple ascii-file
+; without header, containing one cylinder per line. The colums then are
+; x1,y1,z1,x2,y2,z2,R
+; so last column is radius and not diameter. We re-define the cylinder such that the
+; origin of the very first one is at (/0,0,0/) before adding fractal_tree_x0
+fractal_tree_file=tree_data.in;
+; The fractal tree as a whole can be translated
+fractal_tree_x0=0.0, 0.0, 0.0;
+; we can scale the whole tree up as well:
+fractal_tree_scaling=1.0;
+;-------------------------------------------------------------------------------
+; Parameters that control the smoothing of the mask function
+; Discovered that this was done block based, i.e. the smoothing layer
+; had different thickness, if some blocks happened to be at different levels (and still carry
+; a part of the smoothing layer.) I don't know if that made sense, because the layer shrinks/expands then
+; and because it might be discontinous. Both options are included now, default is "as before"
+; Insect%smoothing_thickness=="local"  : smoothing_layer = c_sm * 2**-J * L/(BS-1)
+; Insect%smoothing_thickness=="global" : smoothing_layer = c_sm * 2**-Jmax * L/(BS-1)
+smoothing_thickness=; default: local
+C_smooth=; default: 1.0
+; when using CT data, code computes the mask function in a shell around fluid-solid interface.
+; The tickness of the shell is not a critical parameter, but it affects performance. Thicker shell
+; means more points and thus more comput effort. It is given in multiples of C_smooth, that means
+; shell_thickness = C_shell_thickness * C_smooth * dx_min
+C_shell_thickness=; default: 5.0
 
 
 [funnel]
