--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -360,7 +360,7 @@ smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; [none, Insect, cylinder, two-cylinders, rotating_cylinder, 2D-wingsection, sphere-fixed, sphere-free] 
+; [none, Insect, cylinder, two-cylinders, rotating_cylinder, 2D-wingsection, sphere-fixed, sphere-free]
 ; if "Insect" all other parameters are read from "Insect" section.
 geometry=triangle;
 ; center coordinate of object
@@ -434,8 +434,8 @@ BodyMotion=tethered;
 x0=2 2 2; initial (or tethered) position
 v0=0 0 0; inital velocity
 yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered, or time-average) orientation in degrees
-yawpitchroll_a1=0.0 15.0 0.0; first cosine harmonic component used with yawpitchroll_param
-yawpitchroll_b1=0.0 10.0 0.0; first sine harmonic component used with yawpitchroll_param
+yawpitchroll_a1=0.0 15.0 0.0; if BodyMotion=yawpitchroll_param first cosine harmonic component
+yawpitchroll_b1=0.0 10.0 0.0; if BodyMotion=yawpitchroll_param first sine harmonic component
 eta0=-45.00; stroke plane angle in degrees
 DoF=000000; x,y,z,yaw,pitch,roll DoF on=1 or off=0
 ;-------------------------------------------------------------------------------
@@ -470,6 +470,12 @@ fractal_tree_scaling=1.0;
 ; Insect%smoothing_thickness=="global" : smoothing_layer = c_sm * 2**-Jmax * L/(BS-1)
 smoothing_thickness=; default: local
 C_smooth=; default: 1.0
+; when using CT data, code computes the mask function in a shell around fluid-solid interface.
+; The tickness of the shell is not a critical parameter, but it affects performance. Thicker shell
+; means more points and thus more comput effort. It is given in multiples of C_smooth, that means
+; shell_thickness = C_shell_thickness * C_smooth * dx_min
+C_shell_thickness=; default: 5.0
+
 
 [FreeFlightSolver]
 ; The free-flight solver is a part of the Insects module (although we can use it for
