--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -27,10 +27,16 @@ symmetry_BC=0 0;
 symmetry_vector_component=
 
 
+[Wavelet]
+; which wavelet to use: CDF20, CDF22, CDF40, CDF42 or CDF44
+; required number of ghost nodes: 2, 3, 4, 5, 7
+wavelet=CDF44;
+
+
 [Blocks]
-; size of each block, must be odd (17, 19, 33, etc), if given one value this is used
+; size of each block, must be even, if given one value this is used
 ; for all directions, or specify value for each direction
-number_block_nodes=17 17;
+number_block_nodes=32 32;
 ; ghost nodes for each block. you need to know this value depending on the discretization and the multiresolution
 ; interpolation.
 number_ghost_nodes=4;
@@ -389,21 +395,10 @@ initial_velocity=50.0 0.0 0; u_0
 initial_temperature=200;     T_0
 initial_density=1.645;      rho_0
 
-[Wavelet]
-; if we use harten-multiresolution, the coarsening operator is just taking every second
-; grid point. This is nice and local but the resulting wavelet has no vannishing moments.
-; If biorthogonal is used, a smoothing low-pass filter is applied prior to downsampling.
-; The biorthogonal option does however use harten for the ghost nodes at this time (09/2019)
-transform_type=harten-multiresolution; biorthogonal;
-; only used if transform_type=biorthogonal
-wavelet=CDF4,4;
-
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
 order_discretization=FD_4th_central_optimized;
-; order of refinement predictor [ multiresolution_4th | multiresolution_2nd ]
-order_predictor=multiresolution_4th;
 ; filtering of equations. NOTE: the filters are PHYSICS MODULE SPECIFIC! Hence it depends on the module
 ; which values you can set here.
 ; cNS: [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock | wavelet_filter]
