fix 3D wavelets // big performance tuning // ghosts nodes asymmetric+g different on every call

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -13,6 +13,7 @@ domain_size=4 4 4;
 ; synchronization (on/off)on [x y z] domain boundaries
 ; (off (NON-PERIODIC): 0/false/yes | on (PERIODIC): 1/true/no)
 periodic_BC=1 1 1;
+; --- SINCE Apr 2023, SYMMETRY BC IS BROKEN ---
 ; symmetry BC. If a problem has e.g, x symmetry (mirror axis is then the y-axis), you'd set 1 0 here.
 ; symmetry still goes with periodicity in the code: we solve a symmetric periodic problem (cosine-transform)
 ; this implies all BC in symmetric directions are treated symmetrically (so, at x=const=0 and x=const=Lx)
@@ -41,6 +42,9 @@ number_block_nodes=17 17 17;
 ; ghost nodes for each block. you need to know this value depending on the discretization and the multiresolution
 ; interpolation.
 number_ghost_nodes=4;
+; For the right hand side, less ghost nodes are required than for the wavelet, specify here.
+; For a 4th order FD code, this is 2 (FD4) or 3 (TW4). 2nd order is 1. Default=number_ghost_nodes
+number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 ; ACM: 3 (2D), 4 (3D) +  nscalars
