--- a/TESTING/conv/blob_3D_equi_4th/blob3d.ini
+++ b/TESTING/conv/blob_3D_equi_4th/blob3d.ini
@@ -13,6 +13,7 @@ domain_size=1 1 1;
 number_block_nodes=16;129;17;33;
 ; ghost nodes for each block
 number_ghost_nodes=4;
+number_ghost_nodes_rhs=3;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 number_equations=1;
