--- a/TESTING/conv/blob_2D_adaptive_CDF20/blob-convection-adaptive.ini
+++ b/TESTING/conv/blob_2D_adaptive_CDF20/blob-convection-adaptive.ini
@@ -13,6 +13,7 @@ domain_size=1 1 0;
 number_block_nodes=20;
 ; ghost nodes for each block
 number_ghost_nodes=2;
+number_ghost_nodes_rhs=1;
 ; number of datafields in heavy data array
 number_equations=1;
 ; threshold value for thresholding wavelet coefficients
