--- a/TESTING/conv/blob_3D_adaptive_CDF40/blob3d.ini
+++ b/TESTING/conv/blob_3D_adaptive_CDF40/blob3d.ini
@@ -17,6 +17,7 @@ wavelet=CDF40;
 number_block_nodes=14;
 ; ghost nodes for each block
 number_ghost_nodes=4;
+number_ghost_nodes_rhs=3;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 number_equations=1;
