major: add security zone during adaptation to keep sign. details away from coarseExtensionZone. // minor: fix micro-CT mask // bugixes

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -248,7 +248,8 @@ gamma_p=1;
 u_mean_set=0.0 0.0 0.0;
 ; initial condition
 inicond=meanflow;
-; if inicond= pressure-blob
+; if inicond= pressure-blob, this is the size of the blob.
+; if inicond=noise, this is the upper value for the noise (beta*rand(0..1))
 beta=0.05;
 ; we can use passive scalars with the ACM. their parameters are specified in "ConvectionDiffusion" below
 ; but they need to be turned on here. Default is off.
@@ -271,10 +272,11 @@ use_sponge=0;
 ; version with round corners which is called "p-norm". It has the parameter p_sponge,
 ; which controls the roundedness of corners. The function is inspired by the p-norm
 ; ((x-x0)**p + (y-y0)**p + (z-z0)**p)**1/p [https://de.wikipedia.org/wiki/P-Norm]
-; a good compromise is p=20.0
+; a good compromise is p=8.0
+; choices: rect, rect-symmetry-y, rect-symmetry-yz, inlet-outlet-x, p-norm, p-norm-insect-centered
 sponge_type=rect;
 ; p-sponge is used only in conjunction with sponge_type=p-norm;
-p_sponge=20.0;
+p_sponge=8.0;
 ; thickness of sponge layer (in physial units)
 L_sponge=0.1;
 ; sponge damping constant
@@ -472,7 +474,8 @@ C_smooth=; default: 1.0
 ; when using CT data, code computes the mask function in a shell around fluid-solid interface.
 ; The tickness of the shell is not a critical parameter, but it affects performance. Thicker shell
 ; means more points and thus more comput effort. It is given in multiples of C_smooth, that means
-; shell_thickness = C_shell_thickness * C_smooth * dx_min
+; shell_thickness = C_shell_thickness * dx_min
+; Note: for dry-runs, it is
 C_shell_thickness=; default: 5.0
 
 
