work on TGC vortex...work in progress

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -39,10 +39,11 @@ wavelet=CDF44;
 ; size of each block, must be odd (17, 19, 33, etc), if given one value this is used
 ; for all directions, or specify value for each direction
 number_block_nodes=17 17 17;
-; ghost nodes for each block. you need to know this value depending on the discretization and the multiresolution
-; interpolation.
-number_ghost_nodes=4;
-; For the right hand side, less ghost nodes are required than for the wavelet, specify here.
+; ghost nodes for each block. If you leave it empty, it will be set according
+; to the wavelet. (see Wavelet::wavelet). If the discretization scheme requires
+; more ghost nodes, set the value here.
+number_ghost_nodes=;
+; For the right hand side, often less ghost nodes are required than for the wavelet, specify here.
 ; For a 4th order FD code, this is 2 (FD4) or 3 (TW4). 2nd order is 1. Default=number_ghost_nodes
 number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
@@ -496,3 +497,4 @@ use_free_flight_solver=0;
 ; grid. this test costs some CPU time but no memory. It is done only once at startup.
 test_ghost_nodes_synch=1;
 test_treecode=0;
+test_wavelet_decomposition=0;
