--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -38,10 +38,11 @@ wavelet=CDF44;
 ; size of each block, must be even, if given one value this is used
 ; for all directions, or specify value for each direction
 number_block_nodes=32 32;
-; ghost nodes for each block. you need to know this value depending on the discretization and the multiresolution
-; interpolation.
-number_ghost_nodes=4;
-; For the right hand side, less ghost nodes are required than for the wavelet, specify here.
+; ghost nodes for each block. If you leave it empty, it will be set according
+; to the wavelet. (see Wavelet::wavelet). If the discretization scheme requires
+; more ghost nodes, set the value here.
+number_ghost_nodes=;
+; For the right hand side, often less ghost nodes are required than for the wavelet, specify here.
 ; For a 4th order FD code, this is 2 (FD4) or 3 (TW4). 2nd order is 1. Default=number_ghost_nodes
 number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
@@ -672,4 +673,5 @@ shock_front_normal=2;
 ; check if the ghost node synchronization gives the right order, on a random
 ; grid. this test costs some CPU time but no memory. It is done only once at startup.
 test_ghost_nodes_synch=1;
+test_wavelet_decomposition=0;
 test_treecode=0;
