added compressible TGV

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -326,7 +326,7 @@ dissipation=1;
 ; + funnel
 ; + shock_tube: [sod_shock_tube| standing_shock | moving_shock]
 ; + pipe_flow
-; + no: [pressure_blob | shear_layer | pressure_wave ]
+; + no: [pressure_blob | shear_layer | pressure_wave | taylor_green ]
 case=funnel;
 
 [Boundary_Conditions]
