minor: allow disabling of coarseExtension and securityZone (for testing, should always be used)

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -122,7 +122,14 @@ force_maxlevel_dealiasing=0;
 ; are usually filtered by the coarsening/refinement round trip. So if you do more than one time step
 ; on the grid, consider using a filter. default is "1", which is the classical scheme
 N_dt_per_grid=1;
-
+; coarseExtension means we delete wavelet coefficients near a coarse/fine interface. This
+; allows us to skip the linear system that would occur otherwise, and it avoids artifacts
+; observed with the lifted wavelets. Default=1, you shoudn't use 0
+useCoarseExtension=1;
+; the coarseExtension means deleting WC near the interface. However, if a significant WC travels towards
+; this interface, then it may be deleted. The additional security zone (which is different from the safety
+; zone = refine_everywhere) adds more blocks so that this will not happen. Default=1, you shoudn't use 0
+useSecurityZone=1;
 
 [Time]
 ; final time to reach in simulation
