ACM: passive scalar with Dirichlet BC for odor project

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -300,9 +300,11 @@ C_sponge=1.0e-2;
 ; how many scalar fields do you want to solve? should be the same as number_equations
 ; above.
 N_scalars=1;
+; --------------------------------------------------------------------------------
 ; note you need to specify one value per scalar field for ALL the below parameters
+; --------------------------------------------------------------------------------
 ; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled.
-nu=0.0e-6;
+nu=0.0;
 ; initial condition for the scalar(s)
 inicond=blob;
 blob_width=0.01;
@@ -320,6 +322,9 @@ T_swirl=5.0;
 u0x=1.0;
 u0y=1.0;
 u0z=0.0;
+; The BC can either be "neumann" (adiabatic, no flux) or "dirichlet" (isothermic, fixed concentration)
+; default is neumann
+scalar_BC_type=neumann;
 
 [Navier_Stokes]
 ; choose your coordinate_system
