--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -36,9 +36,9 @@ wavelet=CDF44;
 
 
 [Blocks]
-; size of each block, must be odd (17, 19, 33, etc), if given one value this is used
+; size of each block, must be even, if given one value this is used
 ; for all directions, or specify value for each direction
-number_block_nodes=17 17 17;
+number_block_nodes=20 20 20;
 ; ghost nodes for each block. If you leave it empty, it will be set according
 ; to the wavelet. (see Wavelet::wavelet). If the discretization scheme requires
 ; more ghost nodes, set the value here.
@@ -297,7 +297,9 @@ C_sponge=1.0e-2;
 ; how many scalar fields do you want to solve? Each scalar requires solving an equation and
 ; this the number_equations = N_fluid + N_scalars, N_fluid = 3 (2d) or 4 (3d)
 N_scalars=0;
+; --------------------------------------------------------------------------------
 ; note you need to specify one value per scalar field for ALL the below parameters
+; --------------------------------------------------------------------------------
 ; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled. NOTE: if coupled to ACM,
 ; provide Schmidt number instead of nu
 nu=0.0e-6;
@@ -323,6 +325,9 @@ C_eta=1e-3 1.e-3;
 ; you have to choice to activate this or not. If set, scalars are absorbed in the sponge
 ; layer
 absorbing_sponge=1;
+; The BC can either be "neumann" (adiabatic, no flux) or "dirichlet" (isothermic, fixed concentration)
+; default is neumann
+scalar_BC_type=neumann;
 
 
 [Discretization]
