--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -61,12 +61,12 @@ min_treelevel=1;
 ; only is important for postprocessing, i.e. using the adaptive-POD module. For running
 ; simulations, you can leave the value empty - it is set automatically.
 max_forest_size=22;
-; Use adaptivity or not? If adapt_mesh=1 then the grid is refined before a time step,
-; the time evolution is done, and the grid is coarsened after the time step. If adapt_mesh=0
+; Use adaptivity or not? If adapt_tree=1 then the grid is refined before a time step,
+; the time evolution is done, and the grid is coarsened after the time step. If adapt_tree=0
 ; the grid does not change after the initial condition, and refinement/coarsening are disabled.
 adapt_tree=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
-; default is same value as adapt_mesh
+; default is same value as adapt_tree
 adapt_inicond=1;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
@@ -256,7 +256,9 @@ tsave_stats=0.20;
 c_0=50.0;
 ; viscosity. We also respect the time step constraint imposed by explicit diffusion
 nu=1e-2;
-; damping term for pressure, see [Ohwada, Asinari, JCP2010]
+; damping term for pressure, see [Ohwada, Asinari, JCP2010]. This coefficent is a dashpot-like damping,
+; dp/t = ... -gamma*p and it is used primarily for purely periodic flows without penalization (i.e.
+; without boundary conditions: an example would be Taylor-Green Vortices)
 gamma_p=1;
 ; mean flow, is imposed as initial condition (if inicond=meanflow) and in the sponge
 ; layer as far-field BC (if this is used!)
