add plate-free VPM type: a 2D rect wing crossection coupled with FreeFlightSolver

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -380,7 +380,9 @@ geometry=triangle;
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
 ; [triangle,rhombus,cylinder, sphere]: length or diameter of the object
-length=0.3;
+length=1.0;
+; the "thickness" is used by geometry=2D-plate
+thickness=1.0;
 ; if geometry==2D-wingsection then this INI file is used to determine its kinematics:
 ; this is a vector, we can run many wingsections (typically, two are used)
 wingsection_inifiles=none.ini;
