bugfix in µCT mask / code cosmetics

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -404,22 +404,21 @@ BodyType=nobody;
 ; (which does in our notation imply the centre of gravity there, but this is relevant
 ; only in free-fight, and the superSTL option is currently only used for tethered flight)
 BodySuperSTLfile=;
-HasDetails=all; legs; antennae_proboscis; no;
 RightWing=yes;
 LeftWing=no;
 ; if the insect has a fore- and hind wing, we end up with a four-winged insect
 RightWing2=no;
 LeftWing2=no;
-b_body=0.2;
-L_body=1.0;
-R_head=0.20;
-R_eye=0.075;
-x_head=0.0 0.0 0.0; (vector)
-x_eye_r=; (vector)
-x_eye_l=; (vector)
 J_body_yawpitchroll=1.0 1.0 1.0; Body moment of inertia in body reference frame
-mass=1.0; total mass of animal
+; total mass of animal, in appropriate dimensions. As rho_fluid is usually 1.0
+; and the wing length R=1.0, the unit here would be M=rho_f*R^3
+mass=1.0;
+; if using the free-flight solver, specify the gravitational acceleration.
+; gravity = in z-direction, specify x and y direction (if ever nonzero)
+; separately.
 gravity=1.0; negative: falling in negative z-direction
+gravity_x=; usually zero
+gravity_y=; usually zero
 ;-------------------------------------------------------------------------------
 ; Wing geometry (Shapes: rectangular, TwoEllipses, drosophila, drosophila_mutated,
 ; drosophila_sandberg, drosophila_maeda, flapper_sane)
@@ -430,9 +429,6 @@ WingShape=suzuki;
 b_top=0.1; if WingShape=TwoEllipses, that's thickness of the forward one
 b_bot=0.3; if WingShape=TwoEllipses, that's thickness of the backward one
 L_chord=1.0;
-; the variable L_span is used for bounding box testing and is required only for
-; the WingShapes=[mosquito_iams, rectangular, TwoEllipses ]
-L_span=1.0;
 ; wing tickness (from top to bottom surface, not divided by two)
 ; note if you use WingShape=from_file:: then the thickness is possibly overwritten
 ; by the value in this ini file. If the value is not found in the file, the one given
@@ -491,7 +487,7 @@ C_smooth=; default: 1.0
 ; means more points and thus more comput effort. It is given in multiples of C_smooth, that means
 ; shell_thickness = C_shell_thickness * dx_min
 ; Note: for dry-runs, it is
-C_shell_thickness=; default: 5.0
+C_shell_thickness=; default: 3.0
 
 
 [FreeFlightSolver]
