minor changes (commenting etc)

--- a/LIB/EQUATION/insects/wing_shape_example.ini
+++ b/LIB/EQUATION/insects/wing_shape_example.ini
@@ -25,7 +25,8 @@ bi_wings=(/2.520500e-03 1.644037e-02 8.834148e-03 1.906624e-03 6.657657e-04 -2.5
 x0w=0.000000e+00;
 y0w=5.000000e-01;
 
-; if type==linear, we give theta and R(theta). both are vectors of the same length
+; if type==linear, we give theta and R(theta). both are vectors of the same length. Use the matrix notation (/ /)
+; The centre-point of the wing is still assumed x0w, y0w just in the Fourier case.
 theta_i=;
 R_i=;
 
