--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -64,8 +64,14 @@ eps_norm=Linfty;
 ; resolution at max_treelevel is dx = 2^-max_treelevel * L / Bs (L:domain size, Bs: blocksize)
 max_treelevel=6;
 ; sometimes you want to restrict the minimum refinement as well, for example if we run equidistant
-; simulations (which is quite rare!): in that case, max_treelevel = min_treelevel
+; simulations (which is quite rare!): in that case, max_treelevel = min_treelevel. coarsening beyond
+; min_treelevel is not allowed.
 min_treelevel=1;
+; It is sometimes useful to start the simulation with a refined equidistant grid, i.e., start creating
+; the initial condition on a higher grid level. This is for example useful for expensive mask functions
+; such as the µCT data. After the initial condition, the code is allowed to refine down to min_treelevel again.
+; the default values is the same as min_treelevel
+ini_treelevel=1;
 ; max number of trees in the forest. A tree corresponds to a grid; this notation
 ; only is important for postprocessing, i.e. using the adaptive-POD module. For running
 ; simulations, you can leave the value empty - it is set automatically.
