major: fix wavelets for cases where Bs is small (bug in adapt_tree) // updated unit tests // compression test passes

--- a/TESTING/acm/acm_cyl_adaptive_CDF44/PARAMS_cyl.ini
+++ b/TESTING/acm/acm_cyl_adaptive_CDF44/PARAMS_cyl.ini
@@ -27,7 +27,7 @@ periodic_BC=1 1;
 number_block_nodes=26;
 ; ghost nodes for each block. you need to know this value depending on the discretization and the multiresolution
 ; interpolation.
-number_ghost_nodes=7;
+number_ghost_nodes=;
 number_ghost_nodes_rhs=2;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
