bugfix in insects, hermite series kinematics (< vs <= bug)

--- a/LIB/EQUATION/insects/kinematics_hermite_example.ini
+++ b/LIB/EQUATION/insects/kinematics_hermite_example.ini
@@ -10,18 +10,28 @@ convention=flusi;
 units=degree;
 ; is this hermite or fourier coefficients?
 type=hermite;
+
+; We assume implicitly that the coefficients ai (function values) and bi (derivatives) are samples
+; equidistanly between 0 and 1 (excluding 1). Therefore, no time vector for the samples is passed. 
+; If you request the data at say t=4.2334, then we return
+; the same as t=0.2334. An alternative to this method is the "kineloader", which handles
+; also non-periodic kinematics (however, it is less well tested).
+
 ;------------------------
 ; phi (positional angle)
+; given as function values ai and derivatives bi
 nfft_phi=31;
 ai_phi=63.24528806534019d0 0.0d0 5.753991800610726d0 0.0d0 1.3887974015525626d0 0.0d0 0.3889856512386744d0 0.0d0 0.10577402496901325d0 0.0d0 0.026061339604144987d0 0.0d0 0.005623376646981709d0 0.0d0 0.001042285996467963d0 0.0d0 1.639611509380189d-4 0.0d0 2.1716252827442023d-5 0.0d0 2.408190194815521d-6 0.0d0 2.2268710288534648d-7 0.0d0 1.7118916093759426d-8 0.0d0 1.0914870312823793d-9 0.0d0 5.76135101855556d-11 0.0d0 2.513944479978149d-12;
 bi_phi=0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0;
 ;------------------------
 ; alpha (feathering angle)
+; given as function values ai and derivatives bi
 nfft_alpha=2;
 ai_alpha=20.0 -20.0;
 bi_alpha=0.0 0.0;
 ;------------------------
 ; theta (deviation angle)
+; given as function values ai and derivatives bi
 nfft_theta=1;
 ai_theta=0.0;
 bi_theta=0.0;
