--- a/LIB/EQUATION/insects/kinematics_fourier_example.ini
+++ b/LIB/EQUATION/insects/kinematics_fourier_example.ini
@@ -14,9 +14,9 @@ type=fourier;
 ;----------------------------------------------------------------------------------------
 ; nfft=1 means we expect one value for each of ai,bi (and the constant a0)
 ; The Fourier series evaluation in WABBIT/FLUSI is :
-; Q = a0_Q / 2 + ( a1_Q*sin(1*2*pi*t) + b1_Q*cos(1*2*pi*t) )
-;              + ( a2_Q*sin(2*2*pi*t) + b2_Q*cos(2*2*pi*t) )
-;              + ....
+; Q = a0 / 2 + ( a1*cos(1*2*pi*t) + b1*sin(1*2*pi*t) )
+;            + ( a2*cos(2*2*pi*t) + b2*sin(2*2*pi*t) )
+;            + ....
 ; Note the unfortunate division of a0 by 2, which is an historic artifact.
 ;----------------------------------------------------------------------------------------
 
