Preparation for CVS
- added parameter for CVS
- started working on adapt_tree, currently the WD

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -30,9 +30,10 @@ symmetry_vector_component=
 
 
 [Wavelet]
-; which wavelet to use: CDF20, CDF22, CDF40, CDF42 or CDF44
-; required number of ghost nodes: 2, 3, 4, 5, 7
+; which wavelet to use: CDF20, CDF22, CDF40, CDF42, CDF44, CDF46, CDF60 or CDF62
+; required number of ghost nodes: 2, 3, 4, 5, 7, 9, 6, 7
 wavelet=CDF44;
+cvs=0;
 
 
 [Blocks]
