recall that symmetry BC are not currently implemented

--- a/LIB/EQUATION/insects/wing_shape_example.ini
+++ b/LIB/EQUATION/insects/wing_shape_example.ini
@@ -11,7 +11,8 @@
 ; linear:
 ;       The wing contour is described in polar coordinates, just like in the "fourier" case, but the R(theta) is
 ;       included as a table, not as Fourier coefficients. This is useful if the wing contains sharp edges, where the
-;       Fourier series converges badly (Gibbs ringing).
+;       Fourier series converges badly (Gibbs ringing). Note theta is in [0, 2*pi) in WABBIT, while in many 
+;       implementations, it may also run [-pi, pi). 
 ; kleemeier:
 ;       the wing is a rectangular membrane (possibly with bristles)
 ;       T. Engels, D. Kolomenskiy, F.-O. Lehmann, Flight efficiency is key to diverse wing morphologies in small insects, J. R. Soc. Interface 18 20210518, 2021
