--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -381,7 +381,8 @@ smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; [none, Insect, cylinder, two-cylinders, rotating_cylinder, 2D-wingsection, sphere-fixed, sphere-free]
+; [none, Insect, cylinder, two-cylinders, rotating_cylinder, 2D-wingsection, sphere-fixed, sphere-free,
+; lamballais]
 ; if "Insect" all other parameters are read from "Insect" section.
 geometry=triangle;
 ; center coordinate of object
@@ -396,7 +397,15 @@ wingsection_inifiles=none.ini;
 ; smoothing constant (smoothing layer is propotional to dx_min)
 ; Note: insect module uses its own [Insects::C_smooth]
 C_smooth=1.5;
-
+; Parameters for 2D lamballais test case (used only if geometry==lamballais)
+; Gautier, R., Biau, D., Lamballais, E.: A reference solution of the flow over a circular cylinder at Re = 40 , Computers & Fluids 75, 103–111, 2013 
+R0=0.50;
+R1=1.75;
+R2=2.25;
+file_usx=
+file_usy=
+file_usp=
+smoothing_type=hester; hester, discontinuous/dis, cos
 
 [Insects]
 ; NOTE: Those parameters are used only in ACM and only if VPM::geometry=Insect
