Update test results
- updating test results for new full wavelet transformation adaption
- update test initial conditions to be more complex, this takes a bit more time but catches more things which are going on
- updated blockmin to what i've found from unit tests
- image denoising test in post processing

--- a/TESTING/conv/blob_adaptive_3D_CDF44/blob-convection.ini
+++ b/TESTING/conv/blob_adaptive_3D_CDF44/blob-convection.ini
@@ -14,17 +14,17 @@ wavelet=CDF44;
 
 [Blocks]
 ; size of each block, should be even (18, 32, 64 etc)
-number_block_nodes=22;
+number_block_nodes=18;
 ; ghost nodes for each block
-number_ghost_nodes=7;
-number_ghost_nodes_rhs=3;
+number_ghost_nodes=;
+number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 number_equations=1;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;
 ; treelevel bounds
-max_treelevel=4;
+max_treelevel=5;
 min_treelevel=1;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
@@ -82,12 +82,12 @@ N_scalars=1;
 ; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled.
 nu=0.0e-6;
 ; initial condition for the scalar(s)
-inicond=blob;
-blob_width=0.001;
-; position of blob
-x0=0.75;
-y0=0.75;
-z0=0.75;
+inicond=many-blobs;
+Nblobs=2;
+blobs_width=0.01 0.05;
+blobs_x0=0.2 0.8;
+blobs_y0=0.8 0.2;
+blobs_z0=0.2 0.8;
 ; velocity field for transportation, [swirl,constant]
 velocity=constant;
 ; if the velocity profile is the swirl test, one sometimes would want to compute
@@ -102,7 +102,7 @@ u0z=1.0;
 
 [Time]
 ; final time to reach in simulation
-time_max=0.015;
+time_max=0.05;
 ; number of time steps performed. if not set, default value is very large
 nt=;
 ; CFL criterium
@@ -242,4 +242,7 @@ particleCommand=./pig;
 ; check if the ghost node synchronization gives the right order, on a random
 ; grid. this test costs some CPU time but no memory. It is done only once at startup.
 test_ghost_nodes_synch=1;
-test_wavelet_decomposition=0;
+test_treecode=1;
+test_wavelet_decomposition=1;
+; internal testing routine for the ghost nodes: allocates HUGE amounts of memory
+check_redundant_nodes=0;
