--- a/TESTING/conv/blob_equi_2D_CDF40/blob-convection.ini
+++ b/TESTING/conv/blob_equi_2D_CDF40/blob-convection.ini
@@ -10,17 +10,18 @@ domain_size=1 1 0;
 
 [Blocks]
 ; size of each block, should be even (18, 32, 64 etc)
-number_block_nodes=20;
+number_block_nodes=16;
 ; ghost nodes for each block
-number_ghost_nodes=4;
-number_ghost_nodes_rhs=3;
+number_ghost_nodes=;
+number_ghost_nodes_rhs=;
 ; number of datafields in heavy data array
 number_equations=1;
 ; threshold value for thresholding wavelet coefficients
 eps=1.0e-03;
+eps_normalized=1;
 ; treelevel bounds
-max_treelevel=3;
-min_treelevel=3;
+max_treelevel=4;
+min_treelevel=4;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
 ; block distribution for balancing (also used for start distribution)
@@ -53,12 +54,12 @@ N_scalars=1;
 ; if nu<1.0e-10 (or 0.0), diffusion is disabled.
 nu=0.0;
 ; initial condition for the scalar(s)
-inicond=blob;
-blob_width=0.01;
-; position of blob
-x0=0.5;
-y0=0.75;
-z0=0;
+inicond=many-blobs;
+Nblobs=3;
+blobs_width=0.0001 0.001 0.01;
+blobs_x0=0.2 0.6 0.8;
+blobs_y0=0.8 0.6 0.2;
+blobs_z0=0.2 0.4 0.8;
 ; velocity field for transportation, [swirl,constant]
 velocity=constant;
 ; if constant velocity, these are the values
@@ -79,17 +80,17 @@ R_cyl=0.5;
 
 [Time]
 ; final time to reach in simulation
-time_max=0.25;
+time_max=1;
 ; number of time steps performed. if not set, default value is very large
 nt=;
 ; CFL criterium
-CFL=1.0;
+CFL=0.5;
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
 write_method=fixed_time;
 ; write frequency for output, choose very large number for disabling output on disk
 write_freq=50;
 ; write time for output
-write_time=0.25;
+write_time=0.5;
 ; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
 
 ; fixed time step. if greater 0, then the time step is fixed no matter what.
@@ -145,6 +146,7 @@ write_individual_timings=0;
 ; check if the ghost node synchronization gives the right order, on a random
 ; grid. this test costs some CPU time but no memory. It is done only once at startup.
 test_ghost_nodes_synch=1;
-test_treecode=0;
+test_treecode=1;
+test_wavelet_decomposition=1;
 ; internal testing routine for the ghost nodes: allocates HUGE amounts of memory
 check_redundant_nodes=0;
