--- a/TESTING/conv/blob_equi_3D_CDF40/blob-convection.ini
+++ b/TESTING/conv/blob_equi_3D_CDF40/blob-convection.ini
@@ -12,13 +12,13 @@ domain_size=1 1 1;
 ; size of each block, should be even (18, 32, 64 etc)
 number_block_nodes=16;129;17;33;
 ; ghost nodes for each block
-number_ghost_nodes=4;
-number_ghost_nodes_rhs=3;
+number_ghost_nodes=;
+number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 number_equations=1;
 ; threshold value for thresholding wavelet coefficients
-eps=1e-4;
+eps=1e-3;
 ; treelevel bounds
 max_treelevel=2;
 min_treelevel=2;
@@ -107,12 +107,12 @@ N_scalars=1;
 ; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled.
 nu=0.0e-6;
 ; initial condition for the scalar(s)
-inicond=blob;
-blob_width=0.03;
-; position of blob
-x0=0.5;
-y0=0.5;
-z0=0.5;
+inicond=many-blobs;
+Nblobs=3;
+blobs_width=0.02 0.01 0.05;
+blobs_x0=0.2 0.6 0.8;
+blobs_y0=0.8 0.6 0.2;
+blobs_z0=0.2 0.4 0.8;
 ; velocity field for transportation, [swirl,constant]
 velocity=constant;
 ; if the velocity profile is the swirl test, one sometimes would want to compute
@@ -127,9 +127,9 @@ u0z=1.0;
 
 [Time]
 ; final time to reach in simulation
-time_max=4.0;
+time_max=0.5;
 ; number of time steps performed. if not set, default value is very large
-nt=20;
+nt=;
 ; CFL criterium
 CFL=1.0;
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
@@ -137,7 +137,7 @@ write_method=fixed_time;
 ; write frequency for output, choose very large number for disabling output on disk
 write_freq=2;
 ; write time for output
-write_time=1.0;
+write_time=0.5;
 ; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
 
 ; fixed time step. if greater 0, then the time step is fixed no matter what.
@@ -279,6 +279,7 @@ write_individual_timings=0;
 ; check if the ghost node synchronization gives the right order, on a random
 ; grid. this test costs some CPU time but no memory. It is done only once at startup.
 test_ghost_nodes_synch=1;
-test_treecode=0;
+test_treecode=1;
+test_wavelet_decomposition=1;
 ; internal testing routine for the ghost nodes: allocates HUGE amounts of memory
 check_redundant_nodes=0;
