--- a/TESTING/acm/acm_cyl_adaptive_CDF44/acm_cyl.ini
+++ b/TESTING/acm/acm_cyl_adaptive_CDF44/acm_cyl.ini
@@ -28,7 +28,7 @@ number_block_nodes=26;
 ; ghost nodes for each block. you need to know this value depending on the discretization and the multiresolution
 ; interpolation.
 number_ghost_nodes=;
-number_ghost_nodes_rhs=2;
+number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 ; ACM: 3 (2D), 4 (3D) +  nscalars
@@ -73,6 +73,8 @@ coarsening_indicator=threshold-state-vector;
 ; default=0, even though this is stupid: if you have large pressure (say u=1 and pressure=10000), then only the pressure will determine
 ; the grid
 eps_normalized=1;
+; norm where the thresholding is applied - Linfty (default), L2 or H1
+eps_norm=Linfty;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
 ; many as number_equations
