Refine only significant blocks, componentwise norm for parts of the domain
- after some talking with thomas, I have looked over my prototype to refine only significant blocks, it was severly simplified (essentially taking over the results from the coarsening indicator call from adapt_tree)
- I had to introduce another refinement flag though, in order to separate significant from unsignificant blocks, when they are retained from coarsening
- added this to the parameters
- componentwisenorm can now be executed on parts only, similar to the cases from syncing (level and ref)
- solved a bug in statistics so that we have no issues with cases without viscosity

--- a/TESTING/acm/acm_cyl_adaptive_CDF44/acm_cyl.ini
+++ b/TESTING/acm/acm_cyl_adaptive_CDF44/acm_cyl.ini
@@ -62,6 +62,10 @@ inicond_refinements=0;
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
+; refinement indicator to be used in mesh refinement [everywhere, significant]
+; everywhere: refine every single block, a long proven tactic
+; significant: do not refine blocks which are not deemed significant, this can save many blocks but is still experimental
+refinement_indicator=everywhere;
 ; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; primary-variables: only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
