--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -92,6 +92,10 @@ inicond_refinements=0;
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
+; refinement indicator to be used in mesh refinement [everywhere, significant]
+; everywhere: refine every single block, a long proven tactic
+; significant: do not refine blocks which are not deemed significant, this can save many blocks but is still experimental
+refinement_indicator=everywhere;
 ; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; random: randomly coarse some blocks. used for testing. note we tag for coarsening only once in the first iteration
