Flexible norm equivalent
- select values of 2 or greater in thresholding-state-vecotr-component to get those treated with a norm equivalent
- did some fortran magic for that but the implementation is pretty smooth i'd say
- new test for this to showcase that it works
- moved the acm tests to a new folder to be more in line with their naming after their test names

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -112,9 +112,9 @@ eps_normalized=1;
 eps_norm=Linfty;
 ; threshold value for thresholding wavelet coefficients. smaller values imply denser grids. Typical values are ~1e-3
 eps=1e-3;
-; which components to use for coarsening_indicator? default is all components.
+; which components to use for coarsening_indicator? default is all components individually (set to 1).
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
-; many as number_equations
+; many as number_equations, values>1 are each treated together with a norm-equivalent
 threshold_state_vector_component=1 1 0;
 ; it can be useful to also use the mask function (if penalization is used) for grid adaptation.
 ; i.e. the grid is always at the finest level on mask interfaces. Careful though: the Penalization
