--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -112,9 +112,9 @@ coarsening_indicator_inicond=;
 ; default=0, even though this is stupid: if you have large pressure (say u=1 and pressure=10000), then only the pressure will determine
 ; the grid
 eps_normalized=1;
-; which components to use for coarsening_indicator? default is all components.
+; which components to use for coarsening_indicator? default is all components individually (set to 1).
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
-; many as number_equations
+; many as number_equations, values>1 are each treated together with a norm-equivalent
 threshold_state_vector_component=1 1 1 1;
 ; it can be useful to also use the mask function (if penalization is used) for grid adaptation.
 ; i.e. the grid is always at the finest level on mask interfaces. Careful though: the Penalization
